--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,15 @@ networks:
     external: false
 
 services:
-  batch7:
+  vkb:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/7
+      - .:/vkb
     labels:
-      - traefik.http.routers.batch7.rule=Host(`batch7.platfom.live`)
-      - traefik.http.routers.batch7.tls=true
-      - traefik.http.routers.batch7.tls.certresolver=lets-encrypt
+      - traefik.http.routers.vkb.rule=Host(`vkb.platfom.live`)
+      - traefik.http.routers.vkb.tls=true
+      - traefik.http.routers.vkb.tls.certresolver=lets-encrypt
       - traefik.port=8000  
     networks:
       - web
